# fast-gpio

./: CMakeLists.txt  README.md
include/: fastgpio.h  fastgpioomega2.h  fastgpiotypes.h  fastirqhandler.h  fastirqmetadata.h  module.h
src/: fastgpio.cpp  fastgpioomega2.cpp  fastirqhandler.cpp  module.cpp
